[package]
name = "ext2"
version = "0.1.0"
authors = ["susliko <1istoobig@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.1"
serde = { version = "1.0.106", features = ["derive"] }
anyhow = "1.0.28"