[package]
name = "ext2"
version = "0.1.0"
authors = ["susliko <1istoobig@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.2.1"
serde = { version = "1.0.106", features = ["derive"] }
serde-big-array = "0.2.0"
anyhow = "1.0.28"
daemonize = "0.4.1"

[lib]
name = "fs"
path = "src/fs/lib.rs"

[[bin]]
name = "ext2server"
path = "src/bin/server.rs"

[[bin]]
name = "ext2client"
path = "src/bin/client.rs"
